Final Polish Team AI Avatars Smart Cursor and UI

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -42,33 +42,38 @@
   },
   "questions": {
     "stage": {
-      "question": "في أي مرحلة عملك الآن؟",
+      "question": "أين تقف علامتك التجارية اليوم؟",
       "options": [
-        "مجرد البداية",
-        "نمو سريع",
-        "شركة قائمة",
-        "مؤسسة كبيرة"
+        "فكرة / شركة ناشئة",
+        "توسع / نمو سريع",
+        "رائد في السوق / شركة قائمة",
+        "علامة تجارية عريقة / إعادة ابتكار"
       ]
     },
     "goal": {
-      "question": "ما الذي تريد تحقيقه؟",
+      "question": "ما هو هدفك الأساسي؟",
       "options": [
-        "بناء الوعي بالعلامة التجارية",
-        "زيادة المبيعات/العملاء",
-        "تجديد العلامة التجارية",
-        "التوسع في السوق"
+        "هيمنة ثقافية / علاقات عامة",
+        "أداء / شراء الوسائط الإعلانية",
+        "بنية تحتية رقمية",
+        "توسع عالمي"
       ]
     },
     "obstacle": {
-      "question": "ما الذي يوقفك الآن؟",
+      "question": "ما هي أكبر عقبة تواجهك؟",
       "options": [
-        "خبرة محدودة",
-        "لا توجد استراتيجية واضحة",
-        "عقبات تكنولوجية",
-        "ضيق الوقت"
+        "نقص في الذكاء الاستراتيجي",
+        "تعقيدات تقنية",
+        "تشبع السوق",
+        "عدم اتساق العلامة التجارية"
       ]
     },
     "cta": "هل تريد منا أن نأخذ هذا إلى أبعد من ذلك؟",
-    "insight": "يمكن توضيح هذا في 15 دقيقة فقط."
+    "insight": "يمكن توضيح هذا في 15 دقيقة فقط.",
+    "micro": {
+      "noPressure": "لا ضغوط. فقط وضوح.",
+      "control": "أنت في قمة التحكم.",
+      "handoff": "سنتولى الأمر من هنا."
+    }
   }
 }
