Final cleanup: Fully removed plug interaction and updated content

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -15,7 +15,7 @@
     "title": "XFUSE",
     "subtitle": "ذكاء استراتيجي. نربط النقاط لعلامتك التجارية.",
     "lightOn": "شغل الإضاءة",
-    "plugHint": "انقر على القابس للاتصال"
+    "plugHint": "اسحب القابس للمقبس | أو اضغط للتوصيل"
   },
   "avatar": {
     "welcome": "علامتك التجارية جاهزة تقريباً. لنشغل الإضاءة!",
