--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,7 @@
     "title": "XFUSE",
     "subtitle": "Strategic Intelligence. Connecting the dots for your brand.",
     "lightOn": "Turn the light on",
-    "plugHint": "Click the plug to connect"
+    "plugHint": "DRAG PLUG ➔ SOCKET | OR CLICK SOCKET"
   },
   "avatar": {
     "welcome": "Your brand is almost ready. Let's turn the light on!",
